@@ -1,3 +1,11 @@
+1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>
+
+	* ArchivedGeometryWidget.m ([ArchivedGeometryWidget
+	-loadWindowGeometryRecord]): Use lispGet: instead of
+	lispArchiverGet().
+	([ArchivedGeometryWidget -updateArchiver]): Likewise.  Use
+	lispPutShallow: instead of lispArchiverPut().
+
 1999-01-19  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
 	* WindowGeometryRecord.[hm] ([WindowGeometryRecord -lispOutDeep:]): 
